--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: apicurio-operator
           # Replace this with the built image name
-          image: REPLACE_IMAGE
+          image: quay.io/integreatly/apicurio-operator:latest
           ports:
           - containerPort: 60000
             name: metrics
