--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -60,7 +60,8 @@ required = [
 
 [[constraint]]
   #branch = "master"
-  version = "=v3.9.0"
+  #version = "=v3.9.0"
+  branch = "release-3.10"
   name = "github.com/openshift/client-go"
 
 [[constraint]]
