--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -18,7 +18,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: cluster-admin
+  name: "system:image-pusher"
 subjects:
   - apiGroup: rbac.authorization.k8s.io
     kind: Group
