--- a/.travis.yml
+++ b/.travis.yml
@@ -25,5 +25,9 @@ jobs:
       - make travis/setup image/docker-build TAG=$(git rev-parse --short ${TRAVIS_COMMIT})
     - stage: push
       script:
+      - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
+      - export TAG=$(git rev-parse --short ${TRAVIS_COMMIT})
       - docker login --password "$QUAY_PASSWORD" --username "$QUAY_USERNAME" quay.io
-      - make travis/setup image/docker-build-and-push TAG=$(git rev-parse --short ${TRAVIS_COMMIT})
+      - make travis/setup image/docker-build-and-push TAG=$TAG
+      - docker tag quay.io/integreatly/$OPERATOR_NAME:$TAG quay.io/integreatly/$OPERATOR_NAME:$BRANCH
+      - docker push quay.io/integreatly/$OPERATOR_NAME:$BRANCH
